// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform-origin: 10px 20px 5px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 10px 20px 5px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(10.0f, UniCSSUnitType::PX), UniCSSUnitValue(20.0f, UniCSSUnitType::PX), UniCSSUnitValue(5.0f, UniCSSUnitType::PX)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(10.0f, UniCSSUnitType::PX), UniCSSUnitValue(20.0f, UniCSSUnitType::PX), UniCSSUnitValue(5.0f, UniCSSUnitType::PX))",
    },
  },
}
`;

exports[`transform-origin: 20px 30px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 20px 30px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(20.0f, UniCSSUnitType::PX), UniCSSUnitValue(30.0f, UniCSSUnitType::PX)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(20.0f, UniCSSUnitType::PX), UniCSSUnitValue(30.0f, UniCSSUnitType::PX))",
    },
  },
}
`;

exports[`transform-origin: 20px 50% 10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 20px 50% 10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(20.0f, UniCSSUnitType::PX), UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(10.0f, UniCSSUnitType::PX)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(20.0f, UniCSSUnitType::PX), UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(10.0f, UniCSSUnitType::PX))",
    },
  },
}
`;

exports[`transform-origin: 25% 75%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 25% 75%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(25.0f, UniCSSUnitType::PCT), UniCSSUnitValue(75.0f, UniCSSUnitType::PCT)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(25.0f, UniCSSUnitType::PCT), UniCSSUnitValue(75.0f, UniCSSUnitType::PCT))",
    },
  },
}
`;

exports[`transform-origin: 30% 60% 15px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 30% 60% 15px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(30.0f, UniCSSUnitType::PCT), UniCSSUnitValue(60.0f, UniCSSUnitType::PCT), UniCSSUnitValue(15.0f, UniCSSUnitType::PX)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(30.0f, UniCSSUnitType::PCT), UniCSSUnitValue(60.0f, UniCSSUnitType::PCT), UniCSSUnitValue(15.0f, UniCSSUnitType::PX))",
    },
  },
}
`;

exports[`transform-origin: 30%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 30%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(30.0f, UniCSSUnitType::PCT)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(30.0f, UniCSSUnitType::PCT))",
    },
  },
}
`;

exports[`transform-origin: 50% 50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 50% 50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(50.0f, UniCSSUnitType::PCT)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(50.0f, UniCSSUnitType::PCT))",
    },
  },
}
`;

exports[`transform-origin: bottom center 10%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: bottom center 10%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transform-origin",
        "important": false,
        "prop": "transformOrigin",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "bottom center 10%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Invalid transform-origin value: bottom",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transform-origin: bottom: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: bottom: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(100.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::NONE)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(100.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::NONE))",
    },
  },
}
`;

exports[`transform-origin: center center: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: center center: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(50.0f, UniCSSUnitType::PCT)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(50.0f, UniCSSUnitType::PCT))",
    },
  },
}
`;

exports[`transform-origin: center: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: center: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::NONE)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::NONE))",
    },
  },
}
`;

exports[`transform-origin: left center: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left center: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(0.0f, UniCSSUnitType::PCT), UniCSSUnitValue(50.0f, UniCSSUnitType::PCT)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(0.0f, UniCSSUnitType::PCT), UniCSSUnitValue(50.0f, UniCSSUnitType::PCT))",
    },
  },
}
`;

exports[`transform-origin: left top 60px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left top 60px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(0.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::PCT), UniCSSUnitValue(60.0f, UniCSSUnitType::PX)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(0.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::PCT), UniCSSUnitValue(60.0f, UniCSSUnitType::PX))",
    },
  },
}
`;

exports[`transform-origin: left top right: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left top right: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transform-origin",
        "important": false,
        "prop": "transformOrigin",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "left top right",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Invalid transform-origin value: right",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transform-origin: left top: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left top: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(0.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::PCT)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(0.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::PCT))",
    },
  },
}
`;

exports[`transform-origin: left: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(0.0f, UniCSSUnitType::PCT), UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::NONE)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(0.0f, UniCSSUnitType::PCT), UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::NONE))",
    },
  },
}
`;

exports[`transform-origin: right bottom: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: right bottom: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(100.0f, UniCSSUnitType::PCT), UniCSSUnitValue(100.0f, UniCSSUnitType::PCT)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(100.0f, UniCSSUnitType::PCT), UniCSSUnitValue(100.0f, UniCSSUnitType::PCT))",
    },
  },
}
`;

exports[`transform-origin: right: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: right: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(100.0f, UniCSSUnitType::PCT), UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::NONE)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(100.0f, UniCSSUnitType::PCT), UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::NONE))",
    },
  },
}
`;

exports[`transform-origin: top left: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: top left: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transform-origin",
        "important": false,
        "prop": "transformOrigin",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "top left",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Invalid transform-origin value: top",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transform-origin: top: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: top: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::NONE)))",
      "valueCode": "UniCSSTransformOrigin(UniCSSUnitValue(50.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::PCT), UniCSSUnitValue(0.0f, UniCSSUnitType::NONE))",
    },
  },
}
`;
